# ChangeLog for eclass directory
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/eclass/ChangeLog,v 1.577 2012/12/27 22:56:21 mgorny Exp $

  27 Dec 2012; Michał Górny <mgorny@gentoo.org> python-r1.eclass:
  Introduce python_gen_usedep() and python_gen_flags() to make writing complex
  dependencies easier.

  26 Dec 2012; Christoph Junghans <ottxor@gentoo.org> mercurial.eclass:
  added EHG_BOOTSTRAP (bug #340153), EHG_REVISION defaults to 'defaults (bug
  #380947), set web.cacerts (bug #431220), use auth when pulling (bug #432364)

  24 Dec 2012; Zac Medico <zmedico@gentoo.org> python-any-r1.eclass:
  Fix python-any-r1_pkg_setup fallback logic.

  22 Dec 2012; Davide Pesavento <pesa@gentoo.org> qt4-build.eclass:
  Tweak sed expression to match against Qt 4.8.4 too. Thanks to Tomasz
  Mloduchowski <q@qdot.me> for spotting the regression.

  20 Dec 2012; Michał Górny <mgorny@gentoo.org> python-single-r1.eclass:
  Introduce python_fix_shebang(), to fix shebangs in installed Python scripts
  recursively.

  20 Dec 2012; Michał Górny <mgorny@gentoo.org> python-any-r1.eclass,
  python-r1.eclass, python-single-r1.eclass, python-utils-r1.eclass:
  Commonize the code for obtaining the Python interpreter dependency string.

  20 Dec 2012; Justin Lecher <jlec@gentoo.org> flag-o-matic.eclass:
  Add fix for nen gnu compiler which use -x as command line arg internally,
  #445244

  20 Dec 2012; Mike Gilbert <floppym@gentoo.org> python.eclass:
  Remove pypy version mapping table from wrapper scripts. We can add it back if
  pypy is ever ported to py3k and we are still using this eclass.

  20 Dec 2012; Mike Gilbert <floppym@gentoo.org> python.eclass:
  Add pypy version mapping for 2.0 => 2.7.

  20 Dec 2012; Mike Gilbert <floppym@gentoo.org> python.eclass:
  Add 2.7-pypy-2.0.

  20 Dec 2012; Mike Gilbert <floppym@gentoo.org> python-utils-r1.eclass:
  Add pypy2_0.
