@@ -1,6 +1,9 @@
 # ChangeLog for eclass directory
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/eclass/ChangeLog,v 1.577 2012/12/27 22:56:21 mgorny Exp $
+# $Header: /var/cvsroot/gentoo-x86/eclass/ChangeLog,v 1.578 2012/12/27 22:56:53 mgorny Exp $
+
+  27 Dec 2012; Michał Górny <mgorny@gentoo.org> python-utils-r1.eclass:
+  Introduce functions to get the includedir for Python.
 
   27 Dec 2012; Michał Górny <mgorny@gentoo.org> python-r1.eclass:
   Introduce python_gen_usedep() and python_gen_flags() to make writing complex
